# NPP-practice

npp_image_processor/: CMakeLists.txt
npp_image_processor/src/: image_io.cpp  image_io.h  main.cpp  npp_core.cu  npp_core.h  presets.cpp  presets.h  utils.h
